<resources>

    <string name="title_favourite">Favorite</string>
    <string name="appName">FootBall Application</string>
    <string name="vs">VS</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_league">Select League</string>
    <string name="weight_kg">weight(kg)</string>
    <string name="height_m">Height(m)</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="teams">Teams</string>

</resources>
