<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_to_favorite"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_to_favorites"
        android:iconifiedByDefault="false"
        android:title="@string/title_favourite" />
</menu>