<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FavoriteMatch">

    <ProgressBar
        android:id="@+id/pgBarFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>